JSAI/error/src/test/resources/init/ke-isNaN.js
var x = isNaN(0);
print(x);

